Use series and not indicators to get objects & remove complex link between project and PostgreSQL connection
